added getter and setter of the entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url= jdbc:mysql://localhost:3306/author_books
+spring.datasource.username= root
+spring.datasource.password= sebdev99-bd
 
+spring.jpa.database-platform= org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql= true
